refactor: modernize codebase to leverage Java 21 and Kotlin coroutines updates